--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<html>
-  Ya know
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link href="https://buslens.github.io/global/decoration.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div id="navigbar"></div>
+</body>
+<script src="https://buslens.github.io/global/data.js"></script>
+<script src="https://kit.fontawesome.com/b457945b5f.js" crossorigin="anonymous"></script>
 </html>
