--- a/DM/buses.html
+++ b/DM/buses.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="navigbar"></div>
+   <a href="https://busmiles.uk/buslog/gmgwhDM2005/home" title="Visit my Buslog!" target="_BLANK"><img src="https://busmiles.uk/API/imageHandler.php?user=gmgwhDM2005" /></a> 
 </body>
 <script src="https://buslens.github.io/global/data.js"></script>
 <script src="https://kit.fontawesome.com/b457945b5f.js" crossorigin="anonymous"></script>
